[tool.poetry]
name = "rpi-audio-reactor"
version = "0.1.0"
description = ""
authors = ["Trevor O'Leary <git@trevoroleary.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.25.2"
wave = "^0.0.2"
pyhap = "^0.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
